fiddle: implement custom (c)path option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(fiddle VERSION 0.0.1)
 find_package(Lua 5.4 REQUIRED)
 find_package(Threads REQUIRED)
 
+include(GNUInstallDirs)
 include(cmake/options.cmake)
 include_directories(src/include ${LUA_INCLUDE_DIR})
 add_subdirectory(src)
