--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,19 @@ set(FIDDLE_SRC
 
 add_executable(${CMAKE_PROJECT_NAME} ${FIDDLE_SRC})
 target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC FDL_LOG_JOURNALD=${WITH_JOURNALD})
+target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC -DFDL_CPATH="$<JOIN:${FDL_CPATH},\\$<SEMICOLON>>")
+target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC -DFDL_PATH="$<JOIN:${FDL_PATH},\\$<SEMICOLON>>")
 target_link_libraries(${CMAKE_PROJECT_NAME}
   ${LUA_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT})
+
+install(DIRECTORY DESTINATION ${CMAKE_INSTALL_LIBDIR}/${CMAKE_PROJECT_NAME})
+install(DIRECTORY DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CMAKE_PROJECT_NAME}/lua)
+
+install(
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}
+  PERMISSIONS
+    OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    GROUP_READ GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE
+  DESTINATION ${CMAKE_INSTALL_BINDIR})
